File renaming for the new repository

--- a/PhD-Paper-01-Cal.ipynb
+++ b/PhD-Paper-01-Cal.ipynb
@@ -16,10 +16,10 @@
     "id": "ljZMs2rg93q6"
    },
    "source": [
-    "# TFM_VIU_09MIAR_JBB\n",
+    "# PhD-Paper-01-Cal\n",
     "## José Belenguer Ballester\n",
     "### Enlace del repositorio GitHub:\n",
-    "#### https://github.com/josebel78/TFM_VIU_09MIAR_JBB.git"
+    "#### https://github.com/josebel78/PhD.git"
    ]
   },
   {
