--- a/PhD-Paper-01-Eval.ipynb
+++ b/PhD-Paper-01-Eval.ipynb
@@ -7,10 +7,10 @@
     "id": "ljZMs2rg93q6"
    },
    "source": [
-    "# TFM_VIU_09MIAR_JBB_Eval\n",
+    "# PhD-Paper-01-Eval\n",
     "## José Belenguer Ballester\n",
     "### Enlace del repositorio GitHub:\n",
-    "#### https://github.com/josebel78/TFM_VIU_09MIAR_JBB.git"
+    "#### https://github.com/josebel78/PhD.git"
    ]
   },
   {
@@ -2813,7 +2813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
