Job dashboard created

--- a/PhD-Paper-01-Test.ipynb
+++ b/PhD-Paper-01-Test.ipynb
@@ -689,7 +689,7 @@
     "                        \n",
     "                for j1 in range(len(initial_solution[m1].job_seq)):\n",
     "\n",
-    "                    ########################################################## EXTERNAL SWAP ##########################################################\n",
+    "                    ############################ EXTERNAL SWAP ############################\n",
     "                \n",
     "                    # print(f'\\nExternal swap between machines M{m0} and M{m1}')\n",
     "                    # print('\\n' + f' External swap between machines M{m0} and M{m1} '.center(160, '-'))\n",
@@ -1043,7 +1043,7 @@
     "        \n",
     "        if not repaired_prec_ok:\n",
     "\n",
-    "            ########################################################## PRECEDENCE RELATIONSHIPS ##########################################################\n",
+    "            ############################ PRECEDENCE RELATIONSHIPS ############################\n",
     "\n",
     "            # print('\\n' + f' PRECEDENCE RELATIONSHIPS '.center(160, '+')) # 483\n",
     "\n",
@@ -1126,7 +1126,7 @@
     "            \n",
     "        elif not repaired_res_ok:\n",
     "\n",
-    "            ############################################################## RESOURCES ##############################################################\n",
+    "            ############################ RESOURCES ############################\n",
     "\n",
     "            # Resources exceeded: This happens when a new job starts\n",
     "\n",
@@ -1189,7 +1189,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "###################################################################### ALGORITHM CONFIGURATION ######################################################################\n",
+    "############################ ALGORITHM CONFIGURATION ############################\n",
     "\n",
     "parent_path = Path.cwd()\n",
     "\n",
@@ -1247,7 +1247,7 @@
     "\n",
     "        print('\\n\\n' + str(' ' + instance_name + ' ').center(160, '#')) # 483\n",
     "\n",
-    "        ###################################################################### DATA LOADING ######################################################################\n",
+    "        ############################ DATA LOADING ############################\n",
     "\n",
     "        load_start_time = time.monotonic()\n",
     "\n",
@@ -1259,7 +1259,7 @@
     "\n",
     "        # display(problem_df)\n",
     "\n",
-    "        ###################################################################### MULTI-START ######################################################################\n",
+    "        ############################ MULTI-START ############################\n",
     "\n",
     "        random.seed(42)\n",
     "        g_rule = 'RES'\n",
@@ -1320,7 +1320,7 @@
     "\n",
     "            print(f'GRASP iteration No. {grasp_iter} starting at {round(grasp_time, 4)} / {instance_T} s        ', end='\\r')\n",
     "\n",
-    "            ################################################################## CONSTRUCTIVE PHASE ##################################################################\n",
+    "            ############################ CONSTRUCTIVE PHASE ############################\n",
     "\n",
     "            # print('\\n' + ' CONSTRUCTIVE PHASE '.center(160, '*'))\n",
     "\n",
@@ -1354,7 +1354,7 @@
     "            # display_solution(initial_solution)\n",
     "            # print('\\nTime elapsed during the constructive phase: {0:4.4f} (ms)\\n'.format(construct_time * 1000))\n",
     "\n",
-    "            ################################################################### lOCAL SEARCH PHASE ###################################################################\n",
+    "            ############################ lOCAL SEARCH PHASE ############################\n",
     "\n",
     "            # print(' LOCAL SEARCH PHASE '.center(160, '*'))\n",
     "\n",
@@ -1418,7 +1418,7 @@
     "            # grasp_time += (grasp_iter_end_time - grasp_iter_start_time)\n",
     "            grasp_time += search_time\n",
     "\n",
-    "        ################################################################### REPAIR ###################################################################\n",
+    "        ############################ REPAIR ############################\n",
     "\n",
     "        if (len(best_grasp_f_dict) > 0) and (best_grasp_f_Cmax < np.inf):\n",
     "\n",
@@ -1477,7 +1477,7 @@
     "\n",
     "        # print(f'instance_sol_dict: {instance_sol[instance_name]}')\n",
     "\n",
-    "        ################################################################### FINAL EVALUATION ###################################################################\n",
+    "        ############################ FINAL EVALUATION ############################\n",
     "\n",
     "\n",
     "    print('\\n\\n' + ' SUMMARY '.center(160, '+')) #483\n",
